--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
         <div class="contact__info">
             <h2 class="contact__info_h2">Contact me</h2>
-            <div class="row">
+            <div class="row contact__info__icons-row">
                 <a target="_blank" href="https://www.facebook.com/magda.wojcicka1"
                    class="fa fa-facebook-official contact__info"></a>
                 <a target="_blank" href="https://github.com/madzia89" class="fa fa-github contact__info"></a>
@@ -292,7 +292,7 @@
                    class="fa fa-linkedin-square contact__info"></a>
             </div>
             <div class="row">
-                <address class="contact__info">wojcicka.ma@gmail.com</address>
+                <address class="contact__info__mail">wojcicka.ma@gmail.com</address>
             </div>
         </div>
     </div>
