--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                         <div class="carousel-item">
                             <img class="d-block w-100 carousel about-me__carousel"
-                                 src="img/threads.jpg" alt="Picture of threads laying in a basket">
+                                 src="img/thread.jpg" alt="Picture of threads laying in a basket">
                             <div class="carousel-item__background carousel-item__setting">
                                 <p class="carousel-item__description">No good book around?<br>That is the best
                                     moment to learn something new or diy.</p>
@@ -177,7 +177,7 @@
 
                         <div class="carousel-item">
                             <img class="d-block w-100 carousel about-me__carousel"
-                                 src="img/walks.jpg" alt="Picture of woods">
+                                 src="img/walk.jpg" alt="Picture of woods">
                             <div class="carousel-item__background carousel-item__setting">
                                 <p class="carousel-item__description">If it wasn't for bugs I would spent hours
                                     walking around nature.<br>Woods, lakes, montains, beach...</p>
@@ -251,7 +251,7 @@
 
                         <div>
                             <img class="d-block w-100 container-small__picture"
-                                 src="img/threads.jpg" alt="Picture of threads laying in a basket">
+                                 src="img/thread.jpg" alt="Picture of threads laying in a basket">
                             <div class="carousel__container-small__text">
                                 <p>No good book around?<br>That is the best moment to
                                     learn something new or diy.</p>
@@ -260,7 +260,7 @@
 
                         <div>
                             <img class="d-block w-100 container-small__picture"
-                                 src="img/walks.jpg" alt="Picture of woods">
+                                 src="img/walk.jpg" alt="Picture of woods">
                             <div class="carousel__container-small__text">
                                 <p>If it wasn't for bugs I would spent hours walking
                                     around nature.<br>Woods, lakes, montains, beach...</p>
