remove unnecessary br from carousel__container-small-text

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                                  alt="Picture of two people riding a bike">
                             <div class="carousel__container-small__text">
                                 <p>As soon as storks arrvie to their Polish
-                                    nests,<br>I pop my old <em>blue arrow</em> bike form the garage and can ride
-                                    until trees lose their brown leaves in fall.<br>But the best thing about riding a
+                                    nests, I pop my old <em>blue arrow</em> bike form the garage and can ride
+                                    until trees lose their brown leaves in fall. But the best thing about riding a
                                     bike
                                     is meeting with friends and visiting awesome places.</p>
                             </div>
@@ -226,7 +226,7 @@
                                  src="img/city_at_night.jpg" alt="Picture of city at night">
                             <div class="carousel__container-small__text">
                                 <p>If you want to feel any city's heart beat you need
-                                    to see in the late evening,<br> it is calm, charming and at it's best.</p>
+                                    to see in the late evening,  it is calm, charming and at it's best.</p>
                             </div>
                         </div>
 
@@ -234,8 +234,8 @@
                             <img class="d-block w-100 container-small__picture"
                                  src="img/rain.jpg" alt="Picture of a man standing in the rain">
                             <div class="carousel__container-small__text">
-                                <p>Rainy but warm weather...<br>As before: it is calm
-                                    and fresh.<br></p>
+                                <p>Rainy but warm weather... As before: it is calm
+                                    and fresh. </p>
                             </div>
                         </div>
 
@@ -243,8 +243,8 @@
                             <img class="d-block w-100 container-small__picture"
                                  src="img/reading.jpg" alt="Picture of an open book with glasses on it">
                             <div class="carousel__container-small__text">
-                                <p>If it has not rained for a few days,<br>it is the
-                                    middle of the day<br>and you are fed up with every little thing surrounding you,<br>I
+                                <p>If it has not rained for a few days, it is the
+                                    middle of the day and you are fed up with every little thing surrounding you, I
                                     am sure you need a good book!</p>
                             </div>
                         </div>
@@ -253,7 +253,7 @@
                             <img class="d-block w-100 container-small__picture"
                                  src="img/thread.jpg" alt="Picture of threads laying in a basket">
                             <div class="carousel__container-small__text">
-                                <p>No good book around?<br>That is the best moment to
+                                <p>No good book around? That is the best moment to
                                     learn something new or diy.</p>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                                  src="img/walk.jpg" alt="Picture of woods">
                             <div class="carousel__container-small__text">
                                 <p>If it wasn't for bugs I would spent hours walking
-                                    around nature.<br>Woods, lakes, montains, beach...</p>
+                                    around nature. Woods, lakes, montains, beach...</p>
                             </div>
                         </div>
 
