changes with pictures

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <img class="card-img-top portfolio__card__picture"
                                  src="img/Designed_by_macrovector_Freepik.jpg"
                                  alt="Question mark picture" title="Coming soon">
-                            <div class="card-body">
+                            <div class="card-body portfolio__card-body">
                                 <h5 class="card-title">Coming Soon</h5>
                                 <p class="portfolio__card-text">I am already working on some cool projects. You can
                                     find
