change buttons color

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Daily Diet</h5>
                                 <p class="portfolio__card-text">First project at Info Share Academy.</p>
-                                <a target="_blank" type="button" class="btn btn-md btn-success portfolio__btn__link"
+                                <a target="_blank" type="button" class="btn btn-md btn-dark portfolio__btn__link"
                                    href="http://www.dailydiet.jfddl4.is-academy.pl/">Go to Daily Diet
                                 </a>
                             </div>
@@ -81,7 +81,7 @@
                                     find
                                     them here
                                     soon.</p>
-                                <button type="button" class="btn btn-md btn-success"
+                                <button type="button" class="btn btn-md btn-dark"
                                         title="Upcoming project" disabled
                                         data-content="Good Job!! Click again to hide">Coming soon
                                 </button>
