--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                                     find
                                     them here
                                     soon.</p>
-                                <button type="button" class="btn btn-md btn-dark"
-                                        title="Upcoming project" disabled
-                                        data-content="Good Job!! Click again to hide">Coming soon
-                                </button>
+                                <!--<button type="button" class="btn btn-md btn-dark"-->
+                                        <!--title="Upcoming project" disabled-->
+                                        <!--data-content="Good Job!! Click again to hide">Coming soon-->
+                                <!--</button>-->
                             </div>
                         </div>
                     </div>
