add smooth scroll

--- a/index.html
+++ b/index.html
@@ -15,26 +15,25 @@
 </head>
 <body>
 
-
 <!--NAV-->  <!--NAV-->  <!--NAV-->  <!--NAV-->  <!--NAV-->
 <nav class="navbar navbar-expand-lg navbar-dark">
 
-    <a class="navbar-brand navigation" href="#intro">MW</a>
+    <a class="navbar-brand navigation smooth-scroll" href="#intro">MW</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon menu"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav navigation__items">
             <li class="nav-item active">
-                <a class="nav-link" href="#portfolio">Portfolio</a>
+                <a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#about-me">About me<span class="sr-only">(current)</span></a>
+                <a class="nav-link smooth-scroll" href="#about-me">About me<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#contact">Contact</a>
+                <a class="nav-link smooth-scroll" href="#contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -83,8 +82,8 @@
                                     them here
                                     soon.</p>
                                 <!--<button type="button" class="btn btn-md btn-dark"-->
-                                        <!--title="Upcoming project" disabled-->
-                                        <!--data-content="Good Job!! Click again to hide">Coming soon-->
+                                <!--title="Upcoming project" disabled-->
+                                <!--data-content="Good Job!! Click again to hide">Coming soon-->
                                 <!--</button>-->
                             </div>
                         </div>
@@ -227,7 +226,7 @@
                                  src="img/city_at_night.jpg" alt="Picture of city at night">
                             <div class="carousel__container-small__text">
                                 <p>If you want to feel any city's heart beat you need
-                                    to see in the late evening,  it is calm, charming and at it's best.</p>
+                                    to see in the late evening, it is calm, charming and at it's best.</p>
                             </div>
                         </div>
 
@@ -301,7 +300,7 @@
 
 
 <script src="js/jquery-3.3.1.min.js"></script>
-
 <script src="js/bootstrap.bundle.js"></script>
+<script src ="js/script.js"></script>
 </body>
 </html>
