add card with contacts app

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
              src="img/Computer_and_coffe__Designed_by_Onlyyouqj_at_freepik.com.jpg"
              alt="Computer and coffe Designed by Onlyyougi at freepik.com">
         <div class="intro__picture-content">
-            <p>Hi, I'm Magda.<br>Let me introduce myself</p>
+            <p class="animation-effect">
+                <span class="text-wrapper">
+                    <span class="line line1"></span>
+                    <span class="letters">
+                Hi, I'm Magda.<br>
+                Let me introduce myself</p>
         </div>
     </div>
     <!--PORTFOLIO-->    <!--PORTFOLIO-->    <!--PORTFOLIO-->
@@ -58,7 +63,7 @@
             <div class="container-fluid col-lg-8 align-self-center order-1 order-xl-0 ">
                 <div class="row">
                     <div class="col-lg-6 portfolio__card__col">
-                        <div class="card h-100 portfolio__card">
+                        <div class="card h-100 portfolio__card text-white bg-dark">
                             <img class="card-img-top portfolio__card__picture" src="img/DailyDiet.png"
                                  alt="Daily Diet landing page" title="Daily Diet">
                             <div class="card-body">
@@ -71,20 +76,15 @@
                         </div>
                     </div>
                     <div class="col-lg-6 portfolio__card__col">
-                        <div class="card h-100  portfolio__card">
-                            <img class="card-img-top portfolio__card__picture"
-                                 src="img/Designed_by_macrovector_Freepik.jpg"
-                                 alt="Question mark picture" title="Coming soon">
-                            <div class="card-body portfolio__card-body">
-                                <h5 class="card-title">Coming Soon</h5>
-                                <p class="portfolio__card-text">I am already working on some cool projects. You can
-                                    find
-                                    them here
-                                    soon.</p>
-                                <!--<button type="button" class="btn btn-md btn-dark"-->
-                                <!--title="Upcoming project" disabled-->
-                                <!--data-content="Good Job!! Click again to hide">Coming soon-->
-                                <!--</button>-->
+                        <div class="card h-100 portfolio__card text-white bg-dark">
+                            <img class="card-img-top portfolio__card__picture" src="img/contacts.png"
+                                 alt="contacts app" title="contacts app">
+                            <div class="card-body">
+                                <h5 class="card-title">Daily Diet</h5>
+                                <p class="portfolio__card-text">React app to save and filter contacts</p>
+                                <a target="_blank" type="button" class="btn btn-md btn-dark portfolio__btn__link"
+                                   href="http://pumped-contacts.surge.sh/">Go to contacts app
+                                </a>
                             </div>
                         </div>
                     </div>
